Fix series selector button icon alignment on mobile

--- a/src/assets/styles/overlay.less
+++ b/src/assets/styles/overlay.less
@@ -40,6 +40,7 @@
 
       .series-dropdown > .dropdown-toggle {
         width: 50px;
+        padding: 0; // Fixes alignment on mobile (padding isn't required due to fixed width)
       }
 
       .indicator-dropdown > .dropdown-toggle {
